# summarizer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
ci/: osx-deps.sh
ci/linux-aarch64/: Dockerfile
ci/linux-x86_64/: Dockerfile
ext-installer/: install.py  install.sh  launcher.sh  summarize.json
extension/: background.js  load.js  manifest.json  progress.html  progress.js  summary.html
summarizer/: __init__.py  audio_decode.c  chatgpt.py  cli.py  extension.py  huggingchat.py  meta.py  summarizer.py  template.j
