[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "summarizer"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1.3",
  "llama_cpp_python>=0.2.64",
  "requests>=2.31.0",
  "yt-dlp>=2024.4.9",
  "huggingface_hub>=0.22.1",
  "pyav>=12.0.5",
  "whisper-cpp-python-smr>=0.1"
]

[tool.setuptools]
packages = ["summarizer"]

[project.scripts]
summarize = "summarizer:cli_main"
summarize_ext = "summarizer:extension_main"

[tool.setuptools.package-data]
summarizer = ["*.j"]
